force-app/main/default/objects/Incentive_Activity_Code_Detail__c/Incentive_Activity_Code_Detail__c.object-meta.xml
<CustomObject>
    <label>Incentive Activity Code Detail</label>
    <nameField>
        <label>Incentive Activity Code Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Activity Code Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>