force-app/main/default/objects/Incentive_Activity_Code_Detail__c/fields/Activities_needed__c.field-meta.xml
<CustomField>
    <fullName>Activities_needed__c</fullName>
    <label>Activities needed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>