force-app/main/default/objects/Incentive_Activity_Code_Detail__c/fields/Incentive_Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Activity_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive Activity Code</label>
    <referenceTo>Incentive_Activity_Code__c</referenceTo>
    <relationshipLabel>Incentive Activity Code Details</relationshipLabel>
    <relationshipName>Incentive_Activity_Code_Details</relationshipName>
    <type>Lookup</type>
</CustomField>