force-app/main/default/objects/Incentive_Activity_Code_Detail__c/fields/isLastDiscount__c.field-meta.xml
<CustomField>
    <fullName>isLastDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLastDiscount</label>
    <type>Checkbox</type>
</CustomField>